--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0",
     "socket.io-client": "^4.8.1",
     "three": "^0.179.1",
     "zustand": "^5.0.7"
